Note Screen implementation changes